# GAVID

./: .gitignore  INSTALL_MACOS.md  README.md  RUNPOD_DEPLOY.md
.claude/: settings.local.json
backend/: .env  .env.example  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
backend/app/: __init__.py  __main__.py  compile_engine.py  config.py  downloads  downloads.pub  inference.py  main.py  metrics.py  schema.py
backend/downloads/: .env
backend/tests/: test_app.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: GPUBackground.tsx  GpuMetricsPanel.tsx  InferenceUpload.tsx
scripts/: benchmark_inference.py  load_test.py  runpod_setup.sh  runpod_start.sh  runpod_stop.sh
